--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/mocha": "^9.0.0",
     "ethereumjs-util": "^7.1.0",
     "ethereumjs-wallet": "^1.0.1",
+    "source-map-support": "^0.5.19",
     "typescript": "^4.3.5"
   }
 }
